<resources>
    <string name="app_name">Rajauang</string>
    <string name="edittext_phone_number_hint">Silahkan masukkan no ponsel anda</string>
    <string name="edittext_SMS_code_hint">Silahkan masukkan kode sms</string>
    <string name="button_obtain_code">Dapatkan Kode</string>
    <string name="button_login">Login</string>
    <string name="edittext_graphical_code">Kode Verifikasi Grafik</string>
    <string name="textview_loan">Pinjaman</string>
    <string name="textview_certification">Sertifikasi</string>
    <string name="textview_me">Saya</string>
    <string name="textview_online_QA">Layanan Online</string>
    <string name="main_page_title">Daun Kredit</string>
    <string name="login_statement">Klik tombol setuju \"Perjanjian Layanan Registrasi dan Privasi\"</string>
    <string name="textview_loan_amount_statement">Silahkan pilih jumlah pinjaman</string>
    <string name="textview_loan_replayment_statement">Silahkan pilih tenggat waktu pembayaran</string>
    <string name="RP600k">Rp. 600.000</string>
    <string name="RP1200K">Rp. 1.200.000</string>
    <string name="loan_7days">7 Hari</string>
    <string name="loan_14days">14 Hari</string>
    <string name="repayment_statement">Total Jumlah Pengembalian</string>
    <string name="total_repayment">Rp. 1.070.000</string>
    <string name="button_current_loan">Pinjaman Saat Ini</string>
    <string name="textview_steps">Hanya dengan 4 langkah. Pinjaman paling cepat dalam 20 menit. </string>
    <string name="textview_repayment_raiders">Lihat Cara Pengembalian Pinjaman</string>
    <string name="textview_loan_amount">Jumlah Pinjaman</string>
    <string name="textview_repayment_time">Jatuh Tempo</string>
    <string name="textview_receiving_bank">Nama Bank Penerima</string>
    <string name="editText_bank_number">Nomor Rekening Penerima</string>
    <string name="editText_use_loan">Guna Pinjaman</string>
    <string name="textview_title_personal_info">Informasi Pribadi</string>
    <string name="textview_field_personal_info">Informasi Pribadi</string>
    <string name="textview_field_professional_info">Informasi Profesi</string>
    <string name="textview_field_Upload_photos">Upload Foto</string>
    <string name="textview_authentication">Otentikasi</string>
    <string name="textview_progress_data_integrity">Integritas Data: </string>
    <string name="textview_progress_rating"> 0% </string>
    <string name="button_certification_submit">Kirim</string>
    <string name="textview_remain_days">05</string>
    <string name="textview_unit_days">Hari</string>
    <string name="textview_unit_tips_expird">Anda telah terlambat</string>
    <string name="textview_unit_tips">Dari hari jatuh jempo</string>
    <string name="textview_remaining_days">Sisa Tenggat Waktu</string>
    <string name="textview_repayment_amount">Rp. 642.000</string>
    <string name="textview_repayment_amount_text">Total Jumlah Pengembalian</string>
    <string name="textview_expiry_date">2017-1-30</string>
    <string name="textview_expiry_date_text">Tanggal Jatuh Tempo</string>
    <string name="buttom_want_to_Repay">Saya ingin mengembalikan</string>
    <string name="textview_been_payment_text">Telah dikembalikan: </string>
    <string name="textview_total_acount">Rp. 642.000</string>
    <string name="textview_total_text">Total: </string>
    <string name="textview_remain_text">Sisa:</string>
    <string name="textview_been_payment_account">Rp. 42.000</string>
    <string name="textview_title_system_message">Pesan Sistem</string>
    <string name="textview_customer_service_hotline">Hotline Layanan Pelanggan</string>
    <string name="textview_bank_select_statement">Silahkan pilih bank untuk mengembalikan pinjaman</string>
    <string name="button_bank_determine">Pilih</string>
    <string name="textview_me_my_loan">Pinjaman Saya</string>
    <string name="textview_me_security_setting">Pengaturan Keamanan</string>
    <string name="textview_me_help_center">Pusat Bantuan</string>
    <string name="textview_me_about_company">Tentang Daun Kredit</string>
    <string name="textview_me_customer_service_hotline">Hotline Layanan Pelanggan</string>
    <string name="edittext_personal_info_full_name">Nama Lengkap</string>
    <string name="edittext_personal_info_ktp_no">No KTP</string>
    <string name="edittext_personal_info_family_name_in_law">Nama Gadis Ibu Kandung</string>
    <string name="textview_personal_info_gender">Jenis Kelamin</string>
    <string name="textview_personal_info_education">Edukasi</string>
    <string name="textview_personal_info_marital_status">Status Perkawinan</string>
    <string name="textview_personal_info_number_of_children">Jumlah Anak</string>
    <string name="textview_personal_info_province_of_residence">Provinsi Hunian</string>
    <string name="textview_personal_info_city_of_residence">Kota Hunian</string>
    <string name="textview_personal_info_street_of_residence">Kecamatan Hunian</string>
    <string name="textview_personal_info_area_of_residence">Kelurahan Hunian</string>
    <string name="textview_personal_info_address">Alamat</string>
    <string name="textview_personal_info_duration_of_residence">Durasi Hunian</string>
    <string name="textview_personal_info_facebook">Facebook</string>
    <string name="textview_personal_info_memverifikasi_info">Verifikasi info belanja online(optional)</string>
    <string name="textview_personal_info_phone_number_verification">Verifikasi no ponsel</string>
    <string name="textview_job_info_title">Informasi Pekerjaan</string>
    <string name="textview_job_info_job_type">Tipe Pekerjaan</string>
    <string name="textview_job_info_monthly_income">Pendapatan Bulanan</string>
    <string name="edittext_job_info_company_name">Nama Perusahaan</string>
    <string name="textview_job_info_province_of_company_located">Provinsi Perusahaan</string>
    <string name="textview_job_info_city_of_company_located">Kota Perusahaan</string>
    <string name="textview_job_info_street_of_company_located">Kecamatan Perusahaan</string>
    <string name="textview_job_info_city_in_the_village">Kelurahan Perusahaan</string>
    <string name="edittext_job_info_address">Alamat</string>
    <string name="edittext_job_info_tel_of_company">No Tel Perusahaan</string>
    <string name="textview_job_info_work_email">Email Kerja (Opsional)</string>
    <string name="textview_job_info_email_verification">Kode Verifikasi Email (Opsional)</string>
    <string name="textview_job_info_statement">Mengisi informasi opsional akan mempercepat proses review kami dan memberikan anda akses pada penawaran</string>
    <string name="textview_contacts_info_father_mother">Ayah/Ibu</string>
    <string name="edittext_contacts_info_name">Nama</string>
    <string name="textview_field_contract_info"> Info Kontak</string>
    <string name="edittext_contacts_info_telephone">Telepon</string>
    <string name="textview_contacts_info_friend">saudara tidak serumah</string>
    <string name="textview_contacts_info_statement">Daun Kredit menggunakan analisa mahadata, proses aplikasi tidak akan mengambil inisiatif untuk menelepon orang tua dan teman, silahkan isi dengan tenang</string>
    <string name="textview_upload_photos_statement_ktp_front">Halaman Depan KTP</string>
    <string name="textview_upload_photps_statement_work_card_photo">Foto Kartu Pekerja</string>
    <string name="textView_upload_photps_statement_work_card_photo_2">(Jika tidak ada anda dapat foto memakai seragam kerja)</string>
    <string name="textview_loan_info_statement">Informasi Pinjaman</string>
    <string name="button_loan_info_cancel">Batal</string>
    <string name="textview_loan_info_audit_passed">Review Lulus</string>
    <string name="textview_loan_info_loan_qualified">Pinjaman Memenuhi Syarat</string>
    <string name="textview_laon_info_audit_passed_statement">Percobaan pertama anda telah berhasil, mohon jaga ponsel anda agar tetap nyala</string>
    <string name="textview_loan_info_loan_qualified_statement">Review anda telah lulus, anda sedang mengajukan pinjaman</string>
    <string name="textview_status">Status</string>
    <string name="button_logout">Log out</string>
    <string name="textview_loan_raiders">Cara Meminjam</string>
    <string name="textview_repayment_raiders_2">Cara Mengembalikan Pinjaman</string>
    <string name="text_about_company_detail">Daun Kredit online mulai dari 15 April 2017, kami adalah salah satu kredit platform pertama yang sepenuhnya dapat dioperasikan melalui app ponsel. \n\nPinjaman tunai otomatis \"tanpa jaminan, tanpa tanda tangan\", hanya butuh ponsel untuk menyelesaikan proses komplit dari pengajuan sampai pengembalian pinjaman. Tujuan pinjaman Daun Kredit adalah untuk mecapai proses review otomatis yang efisien, yang dibantu dengan proses audit manual, paling cepat 3 menit. Pinjaman tunai mulai dari Rp. 600.000 sampai Rp. 1.200.000 dengan tenggat waktu 7 hari atau 14 hari. \n\nDaun Kredit dioperasikan oleh PT. Digital Synergy Technology.</string>
    <string name="text_title_about">Tentang Kami</string>
    <string name="text_title_helpcenter">Pusat Bantuan</string>
    <string name="textview_video_tips">Mohon selesaikan kontrak video dan proses audit, pinjaman akan segera tiba</string>
    <string name="textview_video_tips2">Jika pengajuan anda ditolak, berarti video anda tidak berlaku</string>
    <string name="textview_video_statement">*Mengupload video berikut menyatakan bahwa anda telah menyetujui persyaratan dalam 《Perjanjian Jaminan Pinjaman》</string>
    <string name="text_shoot_kpt_front">Foto Halaman Depan KTP</string>
    <string name="text_shoot_kpt_tips">Foto harus jelas</string>
    <string name="text_button_start_taking_photos">Mulai</string>
    <string name="repayment_method_atm">ATM</string>
    <string name="repayment_method_online">ONLINE</string>
    <string name="repayment_method_mbanking">MBANKING</string>
    <string name="repayment_price_text">Jumlah</string>
    <string name="repayment_price">Rp. 1.000.000</string>
    <string name="repayment_virtual_account">88464-1006000648</string>
    <string name="repayment_virtual_account_text">Akun Virtual</string>
    <string name="bni_virtual_account_atm">
        \n
        1. Masukkan kartu ATM anda dan pilih “ENGLISH” \n
        2. Masukkan PIN dan pilih “ENTER” \n
        3. Pilih “PAYMENT” dan pilih “MULTIPAYMENT” \n
        4. Masukkan kode perusahaan : “88464” (PT SINAR DIGITAL TERDEPAN) dan pilih “CORRECT” \n
        5. Masukkan Nomor Akun Virtual "%1$s" bersamaan dengan kode perusahaan dan tekan “CORRECT” \n
        6. Masukkan jumlah transfer dan tekan “CORRECT” \n
        7. Detil customer akan ditampilkan. Pilih no 1 berdasarkan jumlah pembayaran kemudian tekan "YES" \n
        8. Konfirmasi pembayaran akan ditampilkan, pilih “YES” untuk melanjutkan \n
        9. Simpan struk anda sebagai bukti pembayaran berlaku dari Bank BNI \n
    </string>
    <string name="bank_repayment_statement">
        Setelah pembayaran berhasil, mohon menunggu 1-10 menit , Daun Kredit akan memberikan anda notifikasi pengembalian pinjaman.
        Jika anda menemukan masalah dapat menguhubungi kami di WA +86 02154660121-305

    </string>
    <string name="alfamarts_transaction_code_tips">Transaksi ini didukung semua Alfamart</string>
    <string name="textview_video_re_record">Rekam ulang</string>
    <string name="textview_video_pause">Pause</string>
    <string name="textview_video_complete"><![CDATA[complete&\npreview]]></string>
</resources>