<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <include layout="@layout/sub_video_activity_top" />

    <TextView
        android:id="@+id/id_textview_video_tips"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/textview_video_tips"
        android:textColor="@color/color_red_d"
        android:textSize="16dp" />

    <FrameLayout
        android:id="@+id/fl_activity_video"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

    </FrameLayout>

    <TextView
        android:layout_marginTop="@dimen/dp05"
        android:id="@+id/id_textview_video_statement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/textview_video_statement"
        android:textColor="@color/white"
        android:textSize="@dimen/dp12" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/dp05"
        android:layout_height="@dimen/dp50"
        android:orientation="horizontal"
        android:paddingLeft="@dimen/dp14"
        android:paddingRight="@dimen/dp14">

        <Button
            style="@style/text_14dp_white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_selector"
            android:text="@string/textview_video_re_record" />

        <Button
            style="@style/text_14dp_white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp08"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:background="@drawable/button_selector"
            android:text="@string/textview_video_pause" />

        <Button
            style="@style/text_14dp_white"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dp08"
            android:textAllCaps="false"
            android:layout_weight="1"
            android:background="@drawable/button_selector"
            android:text="@string/textview_video_complete" />

    </LinearLayout>

    <TextView
        android:layout_marginTop="@dimen/dp05"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:text="@string/textview_video_tips2"
        android:textColor="@color/ddsilvery"
        android:textSize="@dimen/dp10" />

</LinearLayout>