<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
            android:background="@color/colorPrimary"
              android:orientation="vertical">

    <include
        layout="@layout/sub_repayment_activity_top"/>

    <!--Methods-->
    <LinearLayout
        android:id="@+id/id_linearlayout_bank_repayment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="14dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_textview_repayment_atm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/repayment_method_atm"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/id_textview_repayment_online"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold"
            android:gravity="center"
            android:text="@string/repayment_method_online"
            android:textColor="@color/white"
            android:textSize="14sp"/>

        <TextView
            android:id="@+id/id_textview_repayment_mbanking"
            android:layout_width="0dp"
            android:textStyle="bold"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/repayment_method_mbanking"
            android:textColor="@color/white"
            android:textSize="14sp"/>
    </LinearLayout>

    <!--Lines-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/id_textview_line_atm"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="@drawable/selector_line"/>

        <TextView
            android:id="@+id/id_textview_line_online"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="@drawable/selector_line"/>

        <TextView
            android:id="@+id/id_textview_line_mbanking"
            android:layout_width="0dp"
            android:layout_height="3dp"
            android:layout_weight="1"
            android:background="@drawable/selector_line"/>
    </LinearLayout>


    <!--repayment price-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:background="@drawable/shape_edge_rectangle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_textview_bank_repayment_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/repayment_price"
                android:textStyle="bold"
                style="@style/text_16dp_white"
               />

            <TextView
                android:layout_marginTop="@dimen/dp05"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/repayment_price_text"
                android:textStyle="bold"
                style="@style/text_14dp_ddsilivery" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_margin="14dp"
            android:layout_weight="1"
            android:background="@drawable/shape_edge_rectangle"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/id_textview_bank_repayment_va"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/repayment_virtual_account"
                android:textStyle="bold"
                style="@style/text_16dp_white"/>

            <TextView
                android:id="@+id/id_textview_tc_va_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/repayment_virtual_account_text"
                android:textStyle="bold"
                style="@style/text_14dp_ddsilivery"/>
        </LinearLayout>
    </LinearLayout>

    <!--Tips-->

    <!--<ScrollView-->
        <!--android:id="@+id/SCROLLER_ID"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:scrollbars="vertical"-->
        <!--android:fillViewport="true">-->

        <com.daunkredit.program.sulu.widget.xleotextview.BothEndFitText
            android:maxLines = "1024"
            android:scrollbars = "vertical"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/id_textview_repayment_steps"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_gravity="left"
            android:padding="14dp"
            android:text="@string/bni_virtual_account_atm"
            app:isIndent="false"
            style="@style/text_12sp_dsiliver" />

    <!--</ScrollView>-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/id_textview_transaction_code_tips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/alfamarts_transaction_code_tips"
            style="@style/text_10dp_ddsiliver" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/bank_repayment_statement"
            style="@style/text_10dp_ddsiliver"/>
    </LinearLayout>
</LinearLayout>
